🎉 Bump version to 1.0.2 and add TypeScript types export in package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "drizzle-query-logger",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
     }
   },
   "type": "module",
