--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "drizzle-query-logger",
   "version": "1.1.0",
+  "sideEffects": false,
   "types": "./dist/index.d.ts",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
