--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "tsup": "^8.5.0"
   },
   "peerDependencies": {
-    "drizzle-orm": "^0.44.3",
+    "drizzle-orm": ">=0.44.3 <1.0.0",
     "typescript": "^5"
   },
   "repository": {
